# batchy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
src/: admin.rs  main.rs  shutdown.rs
tests/: smoke.rs
