[package]
name = "batchy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.5", features = ["json"] }
env_logger = "0.10"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "signal", "rt-multi-thread"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["fs"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
zstd = "0.12"
