[package]
name = "batchy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
archiv = "0.1.1"
axum = { version = "0.6", features = ["json"] }
bunyarrs = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "time", "signal", "rt-multi-thread"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["fs"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
